Kubernetes-Communication-Between-Microservices/ner-deployment.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: ner-service 
spec: 
  selector: 
    run: ner 
  ports: 
    - port: 80 
      targetPort: 5000 
 
---
 
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: ner-deployment 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      run: ner 
  template: 
    metadata: 
      labels: 
        run: ner 
    spec: 
      containers: 
        - name: ner 
          image: ner:latest 
          imagePullPolicy: IfNotPresent 
          ports: 
          - containerPort: 5000
