Kubernetes-Communication-Between-Microservices/nodeport-service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: service-debug 
spec: 
  selector:
    run: orchestrator
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
