Kubernetes-Communication-Between-Microservices/orchestrator-deployment.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: orchestrator-service 
spec: 
  selector: 
    run: orchestrator 
  ports: 
    - port: 80 
      targetPort: 80 
---
 
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: orchestrator-deployment 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      run: orchestrator 
  template: 
    metadata: 
      labels: 
        run: orchestrator 
    spec: 
      containers: 
        - name: orchestrator 
          image: orchestrator:latest 
          imagePullPolicy: IfNotPresent 
          ports: 
          - containerPort: 80
