Kubernetes-Communication-Between-Microservices/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata: 
  name: ingress 
spec: 
  rules: 
  - host: demo.local
    http: 
      paths: 
      - path: /
        backend: 
          serviceName: orchestrator-service
          servicePort: 80
